--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<title>W3.CSS Template</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="css/style.css">
+
+</head>
+<body>
+
+</body>
+</html>
+
+
+
