--- a/index.html
+++ b/index.html
@@ -1,14 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>W3.CSS Template</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Web Page main</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/style.css">
 
 </head>
 <body>
-
+    <div class="content">
+        <div class="row">
+            <div class="info-cont">
+                <h1>This is my personal web page</h1>
+            </div>
+            <div class="column">
+                <div class="card">
+                    <h3>OMA - Metropolia</h3>
+                </div>
+            </div>
+            <div class="column">
+                <div class="card">
+                    <h3>OMA - Metropolia</h3>
+                </div>
+            </div>
+            <div class="column">
+                <div class="card">
+                    <h3>OMA - Metropolia</h3>
+                </div>
+            </div>
+            <div class="column">
+                <div class="card">
+                    <h3>OMA - Metropolia</h3>
+                </div>
+            </div>
+            <div class="column">
+                <div class="card">
+                    <h3>OMA - Metropolia</h3>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
 
